--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,7 @@ body.vg-sidebar-open {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .vg-page {
@@ -89,7 +89,7 @@ body.vg-sidebar-open {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .vg-page-content_with-sidebar {
@@ -117,7 +117,7 @@ body.vg-sidebar-open {
   flex-direction: column;
   justify-content: space-between;
   width: 300px;
-  height: 100vh;
+  height: 100dvh;
   padding: 80px 0;
   background: var(--main-color);
   box-sizing: border-box;
