--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,6 +15,7 @@
 <link rel="icon" href="{{ "favicon.ico" | relURL }}">
 <link rel="icon" type="image/png" href="{{ "favicon-32x32.png" | relURL }}" sizes="32x32">
 <link rel="icon" type="image/png" href="{{ "favicon-64x64.png" | relURL }}" sizes="64x64">
+<link rel="icon" type="image/png" href="{{ "favicon-192x192.png" | relURL }}" sizes="192x192">
 
 <!-- Apple Touch Icon -->
 <link rel="apple-touch-icon" href="{{ "apple-touch-favicon.png" | relURL }}">
