feat: add theme color

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,6 +23,9 @@
 <!-- Manifest for PWA -->
 <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
 
+<!-- Theme color for Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#F7F8F6">
+
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
 
