fix: change theme color

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -24,7 +24,7 @@
 <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
 
 <!-- Theme color for Chrome, Firefox OS and Opera -->
-<meta name="theme-color" content="#F7F8F6">
+<meta name="theme-color" content="#5E7181" />
 
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
