--- a/layouts/partials/home/home-blog-link.html
+++ b/layouts/partials/home/home-blog-link.html
@@ -1,5 +1,5 @@
 <a href="{{ "posts/" | relURL }}" class="vg-home-blog-link">
-  <span class="vg-home-blog-link__text">{{ .Site.Params.homeToBlogText | safeHTML }}</span>
+  <span class="vg-home-blog-link__text">{{ default "To&nbsp;blog" .Site.Params.homeToBlogText | safeHTML }}</span>
 
   <div class="vg-home-blog-link__arrow">
     {{ with resources.Get "icons/arrow-up.svg" }}
